# OpenACCP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: authority-boundary.md  bootstrap.md  codex-install-and-start.md  concepts.md  coordination.md  getting-started.md  glossary.md  handoff-consume.md  positioning.md  release-checklist.md  role-model.md  skill-install.md  source-driven-coordination.md  validator.md
docs/decisions/: ADR-001-dual-adoption-path.md  (+1 more)
openaccp/: cli.py  validate.py
openacp/: __init__.py  cli.py  validate.py  version.py
schemas/: assumption-ledger.schema.json  authority-charter.schema.json  consume-result.schema.json  current-manifest.schema.json  frontier-closure.schema.json  handoff.schema.json  machine-summary.schema.json  review-report.schema.json  scope-boundary.schema.json  sequence-registry.schema.json  source-pack.schema.json  status-report.schema.json  task-card.schema.json
templates/: card-registry.md  child-ledger.json  consume-result.json  decision-registry.json  execution-boundary.json  formal-report.md  frontier-closure.json  frontier-orchestrator-launcher.md  frontier-prompt.md  handoff.md  human-status.md  lane-registry.json  machine-summary.json  prd-intake.md  primary-orchestrator-launcher.md  return-wake.json  review-report.md  reviewer-prompt.md  runtime-boundary.json  short-chat-launcher.md  task-card.md  worker-prompt.md
tools/: openaccp_validate_selftest.py  openacp_cli.py  openacp_validate.py  openacp_validate_selftest.py
(+85 files in other folders)
