[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openaccp"
dynamic = ["version"]
description = "OpenACCP is an open workflow protocol for coordinating multi-agent software work."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Vyqo AI" }]
keywords = ["agents", "workflow", "coordination", "handoff", "validator"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["jsonschema>=4.18"]

[project.scripts]
openaccp = "openaccp.cli:main"
openaccp-validate = "openaccp.validate:main"

[tool.setuptools]
packages = ["openaccp", "openaccp.schemas"]

[tool.setuptools.dynamic]
version = {attr = "openaccp.version.VERSION"}

[tool.setuptools.package-data]
"openaccp.schemas" = ["*.schema.json"]
